[lworld] Missing default initialization of non-flattened field of empty inline type

XMLWordPrintable

      Re-enabling tests that have been disabled due to JDK-8253893 triggers crashes:

      # Internal Error (/oracle/valhalla/open/src/hotspot/share/utilities/growableArray.hpp:152), pid=813819, tid=813820
      # assert(0 <= i && i < _len) failed: illegal index

      Stack: [0x00007f46226fe000,0x00007f46227ff000], sp=0x00007f46227fa990, free space=1010k
      Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.so+0xaec436] reassign_fields_by_klass(InstanceKlass*, frame*, RegisterMap*, ObjectValue*, int, oop, bool, int, Thread*) [clone .part.0]+0x816
      V [libjvm.so+0xaedd3d] Deoptimization::reassign_flat_array_elements(frame*, RegisterMap*, ObjectValue*, flatArrayOop, FlatArrayKlass*, bool, Thread*)+0x15d
      V [libjvm.so+0xaee5ca] Deoptimization::reassign_fields(frame*, RegisterMap*, GrowableArray<ScopeValue*>*, bool, bool, Thread*)+0x57a
      V [libjvm.so+0xaef537] eliminate_allocations(JavaThread*, int, CompiledMethod*, frame&, RegisterMap&, GrowableArray<compiledVFrame*>*, bool&)+0x9e7
      V [libjvm.so+0xaf1ce5] Deoptimization::fetch_unroll_info_helper(JavaThread*, int)+0x475

      Java frames: (J=compiled Java code, j=interpreted, Vv=VM code)
      v ~UncommonTrapBlob
      J 443 c2 compiler.valhalla.inlinetypes.TestLWorld.test119(Z)V (95 bytes) @ 0x00007f4614b3bb70 [0x00007f4614b3bb20+0x0000000000000050]
      j compiler.valhalla.inlinetypes.TestLWorld.test119_verifier(Z)V+10
      j jdk.internal.reflect.GeneratedMethodAccessor45.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+63
      j jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+6 java.base
      j java.lang.reflect.Method.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+59 java.base
      J 408% c1 compiler.valhalla.inlinetypes.InlineTypeTest.run([Ljava/lang/Class;)V (1016 bytes) @ 0x00007f460d63ed1c [0x00007f460d63a8e0+0x000000000000443c]
      j compiler.valhalla.inlinetypes.InlineTypeTest.run([Ljava/lang/String;[Ljava/lang/Class;)V+43
      j compiler.valhalla.inlinetypes.TestLWorld.main([Ljava/lang/String;)V+45
      v ~StubRoutines::call_stub
      Register to memory mapping:


      # A fatal error has been detected by the Java Runtime Environment:
      #
      # SIGSEGV (0xb) at pc=0x00007f6c10aef789, pid=818776, tid=818777
      #
      # JRE version: Java(TM) SE Runtime Environment (17.0) (fastdebug build 17-lworld3ea+0-2021-01-20-1042597.tobias...)
      # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 17-lworld3ea+0-2021-01-20-1042597.tobias..., mixed mode, tiered, compressed oops, compressed class ptrs, g1 gc, linux-amd64)
      # Problematic frame:
      # J 315 c2 java.lang.invoke.LambdaForm$MH+0x00000008000df800.invoke(Ljava/lang/Object;Ljava/lang/Object;)Ljava/lang/Object; java.base (47 bytes) @ 0x00007f6c10aef789 [0x00007f6c10aef680+0x0000000000000109]

      Current thread (0x00007f6c180299f0): JavaThread "main" [_thread_in_Java, id=818777, stack(0x00007f6c1f69a000,0x00007f6c1f79b000)]

      Stack: [0x00007f6c1f69a000,0x00007f6c1f79b000], sp=0x00007f6c1f798e00, free space=1019k
      Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
      J 315 c2 java.lang.invoke.LambdaForm$MH+0x00000008000df800.invoke(Ljava/lang/Object;Ljava/lang/Object;)Ljava/lang/Object; java.base (47 bytes) @ 0x00007f6c10aef789 [0x00007f6c10aef680+0x0000000000000109]
      J 250 c1 java.lang.invoke.LambdaForm$MH+0x00000008000e3400.invoke(Ljava/lang/Object;Ljava/lang/Object;Ljava/lang/Object;)I java.base (130 bytes) @ 0x00007f6c095f776c [0x00007f6c095f7280+0x00000000000004ec]
      J 260 c2 java.lang.invoke.LambdaForm$MH+0x00000008000e2000.guard(Ljava/lang/Object;Ljava/lang/Object;Ljava/lang/Object;)I java.base (98 bytes) @ 0x00007f6c10ae6c78 [0x00007f6c10ae6c00+0x0000000000000078]
      J 259 c2 java.lang.invoke.LambdaForm$MH+0x00000008000e5000.delegate(Ljava/lang/Object;Ljava/lang/Object;Ljava/lang/Object;)I java.base (18 bytes) @ 0x00007f6c10ae66b0 [0x00007f6c10ae6680+0x0000000000000030]
      J 260 c2 java.lang.invoke.LambdaForm$MH+0x00000008000e2000.guard(Ljava/lang/Object;Ljava/lang/Object;Ljava/lang/Object;)I java.base (98 bytes) @ 0x00007f6c10ae6d00 [0x00007f6c10ae6c00+0x0000000000000100]
      J 259 c2 java.lang.invoke.LambdaForm$MH+0x00000008000e5000.delegate(Ljava/lang/Object;Ljava/lang/Object;Ljava/lang/Object;)I java.base (18 bytes) @ 0x00007f6c10ae66b0 [0x00007f6c10ae6680+0x0000000000000030]
      j java.lang.invoke.LambdaForm$MH+0x00000008000ea000.invoke(Ljava/lang/Object;Ljava/lang/Object;Ljava/lang/Object;)I+133 java.base
      J 247 c1 java.lang.invoke.ValueBootstrapMethods.isSubstitutable(Ljava/lang/Object;Ljava/lang/Object;)Z java.base (121 bytes) @ 0x00007f6c095f55e4 [0x00007f6c095f4560+0x0000000000001084]
      v ~StubRoutines::call_stub
      V [libjvm.so+0xecd029] JavaCalls::call_helper(JavaValue*, methodHandle const&, JavaCallArguments*, Thread*)+0x4e9
      V [libjvm.so+0xebbacc] InterpreterRuntime::is_substitutable(JavaThread*, oopDesc*, oopDesc*)+0x26c
      j jdk.test.lib.Asserts.assertEquals(Ljava/lang/Object;Ljava/lang/Object;Ljava/lang/String;)V+2
      j jdk.test.lib.Asserts.assertEquals(Ljava/lang/Object;Ljava/lang/Object;)V+3
      j compiler.valhalla.inlinetypes.TestArrays.test133_verifier(Z)V+24
      j jdk.internal.reflect.GeneratedMethodAccessor15.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+63
      j jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+6 java.base
      j java.lang.reflect.Method.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+59 java.base
      j compiler.valhalla.inlinetypes.InlineTypeTest.run([Ljava/lang/Class;)V+828
      j compiler.valhalla.inlinetypes.InlineTypeTest.run([Ljava/lang/String;[Ljava/lang/Class;)V+43
      j compiler.valhalla.inlinetypes.TestArrays.main([Ljava/lang/String;)V+29
      v ~StubRoutines::call_stub
      V [libjvm.so+0xecd029] JavaCalls::call_helper(JavaValue*, methodHandle const&, JavaCallArguments*, Thread*)+0x4e9
      V [libjvm.so+0x100b779] jni_invoke_static(JNIEnv_*, JavaValue*, _jobject*, JNICallType, _jmethodID*, JNI_ArgumentPusher*, Thread*) [clone .constprop.1]+0x369
      V [libjvm.so+0x100fa85] jni_CallStaticVoidMethod+0x1c5
      C [libjli.so+0x4724] JavaMain+0xd34
      C [libjli.so+0x7d09] ThreadJavaMain+0x9

            Assignee:
            Tobias Hartmann
            Reporter:
            Tobias Hartmann
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: