8261647: [lworld] Missing default initialization of non-flattened field of empty inline type